@@ -1,2 +1,1 @@
-Move signal.a to sig.a.
-
+FMT_ULONG -> (sizeof(long) >> 1) for future compatibility.
