@@ -1,0 +1,2 @@
+t_sig.o
+../sig.a
