@@ -1,2 +1,0 @@
-t_signal.o
-../sig.a
