@@ -1,14 +1,8 @@
 #include "alloc.h"
 #include "array.h"
 #include "bin.h"
-#include "uint32.h"
-#include "uint64.h"
 
-/* 0 on failed alloc
-   1 on success
-   2 on 'already allocated' */
-
-int array_init(array *a, uint64 n, uint32 es)
+int array_init(array *a, unsigned long n, unsigned int es)
 {
   char *x;
   n += 1 + ARRAY_OVERALLOC;
